# generic-battery-optimizer

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  MANUFACTURER_COP_DATA.md  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
data/tests/Data set 1/: HP_Data_1_10_23_samsung_5kW_13_11_23_15min.csv  heat_pump.yaml  results.csv
data/tests/Data set 4/: HP_Data_20_11_2022_Vaillant_5kW_13_11_23_15min.csv  heat_pump.yaml  results.csv
data/tests/Data set 6/: HP_Data_1_10_2023_ecodan_5kW_try_13_11_23_15min.csv  heat_pump.yaml  results.csv
example/: example.py  example2.py  example3.py
example/example_data/: example_profiles.csv
src/battery_optimizer/: __init__.py  _version.py  export.py  model.py  profile_stack_problem.py  solver.py
src/battery_optimizer/blocks/: battery.py  fixed_consumption.py  heat_pump.py  power_profile.py
src/battery_optimizer/export/: heat_pump.py  model.py
src/battery_optimizer/helpers/: blocks.py  heat_pump_block.py  heat_pump_profile.py  parse_profile_stacks.py
src/battery_optimizer/profiles/: battery_profile.py  heat_pump.py  parse_profile_stacks.py  profiles.py
src/battery_optimizer/static/: heat_pump.py  model.py  numbers.py  profiles.py
tests/: docker-compose.yml  helpers.py  test_battery.py  test_charge_discharge.py  test_charge_time.py  test_device_power_constraints.py  test_home_consumption.py  test_min_charge_power.py  test_no_optimisation.py  test_verify_heat_pump_results.py
tests/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
(+2 files in other folders)
